--- a/app/Resources/views/homepage/index.html.twig
+++ b/app/Resources/views/homepage/index.html.twig
@@ -5,11 +5,11 @@
     {
         "@context": "http://schema.org",
         "@type": "Organization",
-        "url": "https://xaydungminhduy.com/",
-        "logo": "https://xaydungminhduy.com/assets/images/logo.png",
+        "url": "https://www.lilyhouse.vn/",
+        "logo": "https://www.lilyhouse.vn/assets/images/logo.png",
         "contactPoint": {
             "@type": "ContactPoint",
-            "telephone": "+84982969379",
+            "telephone": "+84909356718",
             "contactType": "customer service"
         }
     }
@@ -21,10 +21,10 @@
     {
         "@context": "http://schema.org",
         "@type": "WebSite",
-        "url": "https://xaydungminhduy.com/",
+        "url": "https://www.lilyhouse.vn/",
         "potentialAction": {
             "@type": "SearchAction",
-            "target": "https://xaydungminhduy.com/search?q={search_term_string}",
+            "target": "https://www.lilyhouse.vn/search?q={search_term_string}",
             "query-input": "required name=search_term_string"
         }
     }
@@ -36,8 +36,8 @@
     {
         "@context": "http://schema.org",
         "@type": "Person",
-        "name": "Xây Dựng Minh Duy",
-        "url": "https://xaydungminhduy.com/",
+        "name": "Lily House",
+        "url": "https://www.lilyhouse.vn/",
         "sameAs": [
             "{{ get_setting('linkToFacebook') }}",
             "{{ get_setting('linkToTwitter') }}",
