--- a/app/Resources/views/layout/footer.html.twig
+++ b/app/Resources/views/layout/footer.html.twig
@@ -5,9 +5,9 @@
             <div class="col-12 col-md-12 col-lg-3">
                 <h3 class="text-uppercase">Thông tin</h3>
                 <div>
-                    <p>Thực Phẩm Organic chuyên cung cấp các loại trái cây sấy khô tự nhiên và organic hàng nhập từ Mỹ. Ngoài trái cây sấy còn có các loại hạt , bánh</p>
+                    <p>LilyHouse chuyên cung cấp các sản phẩm tốt cho sức khỏe, giúp chị em phụ nữ làm đẹp.</p>
                     <p>118/10B Đông Hưng Thuận 5, Tân Hưng Thuận, Q.12</p>
-                    <p>Call us at: 0909 356 718</p>
+                    <p>Hotline: 0909 356 718</p>
                     <p>Email: lilyhouse.hotro@gmail.com</p>
                 </div>
             </div>
