--- a/app/Resources/views/product/checkout.html.twig
+++ b/app/Resources/views/product/checkout.html.twig
@@ -1,13 +1,16 @@
 <div style="display:none">
     <div id="checkout">
-        <form action="{{ path('rating') }}" id="form-checkout" data-news-id="{{ product.getId() }}">
+        <form action="{{ path('checkout') }}" id="form-checkout" data-product-id="{{ product.getId() }}">
             <div class="row">
                 {{ form_start(formCheckout, {'attr': {'id': 'form-checkout' }}) }}
                     <div class="col-md-6">
                         <div class="product-information">
                             <h3>Thông tin sản phẩm</h3>
                             <div class="media">
-                                <img class="mr-3" src="{{ (vich_uploader_asset(product, 'imageFile') ? vich_uploader_asset(product, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('product_120_120') }}" alt="{{ product.getName() }}">
+                                <img
+                                    class="mr-3 img-thumbnail"
+                                    src="{{ (vich_uploader_asset(product, 'imageFile') ? vich_uploader_asset(product, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('product_120_120') }}"
+                                    alt="{{ product.getName() }}" >
                                 <div class="media-body">
                                     <h5 class="mt-0">{{ product.getName() }}</h5>
                                     <div class="product_price">
@@ -26,8 +29,12 @@
                                             </div>
                                         {% endif %}
                                     </div>
-                                    <p>Bạn vui lòng nhập đúng số điện thoại để chúng tôi sẽ gọi xác nhận đơn hàng trước khi giao hàng. Xin cảm ơn!</p>
+                                    <div class="quantity">
+                                        <label class="screen-reader-text" for="product-quantity">Số lượng:</label>
+                                        <input type="number" id="product-quantity" name="quantity" step="1" min="1" max="100" value="1">
+                                    </div>
                                 </div>
+                                <p class="checkout-note">Bạn vui lòng nhập đúng số điện thoại để chúng tôi sẽ gọi xác nhận đơn hàng trước khi giao hàng. Xin cảm ơn!</p>
                             </div>
                         </div>
                     </div>
@@ -67,6 +74,6 @@
                 {{ form_end(formCheckout) }}
             </div>
         </form>
-        <p class="checkout-message"></p>
+        <p id="checkout-message"></p>
     </div>
 </div>
