--- a/app/Resources/views/layout/slide.html.twig
+++ b/app/Resources/views/layout/slide.html.twig
@@ -11,13 +11,13 @@
                     <img class="lazyload"
                         src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                         data-src="{{ asset('assets/images/banner/home-slide-1.webp') }}"
-                        alt="Cach Cafe">
+                        alt="Lily House">
                 </div>
                 <div class="item">
                     <img class="lazyload"
                         src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                         data-src="{{ asset('assets/images/banner/home-slide-3.webp') }}"
-                        alt="Xây Dựng Minh Duy">
+                        alt="Lily House">
                 </div>
             </div>
             <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
