--- a/app/Resources/views/news/show.html.twig
+++ b/app/Resources/views/news/show.html.twig
@@ -42,7 +42,7 @@
                     </div>
                     <div itemprop="publisher" itemscope itemtype="https://schema.org/Organization">
                         <div itemprop="logo" itemscope itemtype="https://schema.org/ImageObject">
-                            <meta itemprop="url" content="{{ absolute_url(asset('assets/images/SuaNhaMinhDuy.png')) }}">
+                            <meta itemprop="url" content="{{ absolute_url(asset('assets/images/logo.png')) }}">
                             <meta itemprop="width" content="376">
                             <meta itemprop="height" content="218">
                         </div>
