--- a/app/Resources/views/product/productHot.html.twig
+++ b/app/Resources/views/product/productHot.html.twig
@@ -5,7 +5,7 @@
         </h3>
     </div>
     <div class="widget-product">
-        <div class="products-grid row">
+        <div class="products-grid">
             <div class="products-hot-sidebar">
                 {% for row in products %}
                 <div class="products-item">
