--- a/app/Resources/views/news/components/breadcrumbs.html.twig
+++ b/app/Resources/views/news/components/breadcrumbs.html.twig
@@ -1,6 +1,7 @@
 <div class="breadcrumbs {% if type is defined %}type-category{% endif %}">
     <div class="row">
-        {# Breadcrum #}
-        {{ wo_render_breadcrumbs() }}
+        <div class="col-md-12">
+            {{ wo_render_breadcrumbs() }}
+        </div>
     </div>
 </div>
