--- a/web/assets/scss/front/global/_breadcrumbs.scss
+++ b/web/assets/scss/front/global/_breadcrumbs.scss
@@ -13,6 +13,11 @@
         background-color: rgba(255,255,255,0);
         padding: 17px 0 15px;
 
+        @media only screen and (max-width : 768px) {
+            padding: 0;
+            margin-top: 20px;
+        }
+
         li {
             margin-bottom: 0em;
 
