--- a/web/assets/scss/front/global/_menu.scss
+++ b/web/assets/scss/front/global/_menu.scss
@@ -1,10 +1,6 @@
 #nav {
     background-color: $white;
     z-index: 10000;
-    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-    -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-    -ms-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
 
     .nav-container {
         position: relative;
@@ -35,7 +31,7 @@
                     height: auto;
 
                     @media only screen and (max-width : 768px) {
-                        padding-top: 5px;
+                        padding-top: 10px;
                         width: 85%;
                         float: right;
                         text-align: center;
@@ -45,7 +41,7 @@
                         width: 100px;
     
                         @media only screen and (max-width : 768px) {
-                            width: 55px;
+                            height: 45px;
                             margin: 0 auto;
                             vertical-align: middle;
                         }
@@ -53,13 +49,13 @@
                 }
     
                 .navbar-toggle {
-                    border-color: $white;
+                    border-color: #f5ee31;
                     float: left;
                     margin-right: 0px;
                     padding: 8px 10px;
     
                     .icon-bar {
-                        background-color: $white;
+                        background-color: #f5ee31;
                     }
                 }
             }
@@ -69,7 +65,6 @@
                 box-shadow: none;
                 padding: 0;
                 position: relative;
-                text-align: center;
     
                 @media only screen and (max-width: 767.98px) {
                     width: 100%;
@@ -77,10 +72,6 @@
                 }
     
                 .navbar-nav {
-                    display: inline-block;
-                    float: none;
-                    vertical-align: top;
-
                     @media only screen and (max-width: 767.98px) {
                         margin: 0;
                     }
@@ -124,7 +115,7 @@
                         text-transform: uppercase;
                         font-family: $robotoCondesed;
                         color: $black;
-                        text-shadow: 0.2px 0.2px 0.2px $white;
+                        text-shadow: 0.2px 0.2px 0.2px $black;
 
                         &:focus, &:hover {
                             background: transparent;
@@ -134,8 +125,8 @@
                             padding: 10px;
                             font-size: 15px;
                             border-bottom: 1px dotted $geyser;
-                            color: $white;
-                            text-shadow: 0.2px 0.2px 0.2px $white;
+                            color: $black;
+                            text-shadow: 0.2px 0.2px 0.2px $black;
                         }
 
                         i {
@@ -256,18 +247,16 @@
 
 #nav {
     &.navbar-fixed-top {
-        opacity: 0.9;
-
         .nav-container .navbar {
             min-height: auto;
         }
 
         .nav-container .navbar {
             .navbar-header .navbar-brand {
-                padding: 5px 0;
+                padding: 10px 0 0;
 
                 img {
-                    width: 56px;
+                    height: 45px;
                 }
             }
 
