--- a/web/assets/scss/front/global/_sidebar.scss
+++ b/web/assets/scss/front/global/_sidebar.scss
@@ -91,21 +91,30 @@
 }
 
 #shopify-section-sidebar-section {
+    @media only screen and (max-width : 768px) {
+        display: none;
+    }
+
     .sidebar-widget-product {
         margin-bottom: 0;
 
         .products-grid {
             .bx-wrapper {
                 margin-bottom: 30px;
+                border: 0;
 
                 .bx-viewport {
                     .products-item {
                         .products-item-wrapper {
+                            width: 239px !important;
+
                             .media-thumb {
                                 height: 247px;
             
                                 img {
                                     height: 100%;
+                                    padding: 0;
+                                    border-radius: 0;
                                 }
                             }
                         }
