--- a/web/assets/scss/front/pages/_homepage.scss
+++ b/web/assets/scss/front/pages/_homepage.scss
@@ -214,6 +214,13 @@
                             img {
                                 border: none;
                                 padding: 7px;
+
+                                @media only screen and (max-width : 768px) {
+                                    padding: 0;
+                                    width: 85%;
+                                    margin: 0 auto;
+                                    border-radius: 0;
+                                }
                             }
                         }
 
@@ -296,15 +303,28 @@
                         left: -35px;
                         background: url("../../../images/r-left.png") no-repeat;
                         background-size: 40px;
+
+                        @media only screen and (max-width : 768px) {
+                            width: 25px;
+                            left: -14px;
+                            top: 49%;
+                            background-position: -7px 0px;
+                        }
                     }
 
                     .bx-next {
                         width: 30px;
                         height: 40px;
                         top: 48%;
-                        right: -35px    ;
+                        right: -30px;
                         background: url("../../../images/r-right.png") no-repeat;
                         background-size: 40px;
+
+                        @media only screen and (max-width : 768px) {
+                            width: 25px;
+                            right: -14px;
+                            background-position: -7px 0;
+                        }
                     }
                 }
             }
