--- a/app/Resources/views/homepage/index.html.twig
+++ b/app/Resources/views/homepage/index.html.twig
@@ -143,7 +143,7 @@
                                                     <span>{{ row.getName() }}</span>
                                                 </a>
                                             </h5>
-                                            {{ 4|rating }}
+                                            {{ row.ratingNumber|rating }}
                                             <div class="price-box">
                                                 {% if row.getRegularPrice() is empty and row.getSalePrice() is empty %}
                                                     <div class="price-regular">
@@ -182,7 +182,7 @@
                                                     <span>{{ row.getName() }}</span>
                                                 </a>
                                             </h5>
-                                            {{ 4|rating }}
+                                            {{ row.ratingNumber|rating }}
                                             <div class="price-box">
                                                 {% if row.getRegularPrice() is empty and row.getSalePrice() is empty %}
                                                     <div class="price-regular">
@@ -242,7 +242,7 @@
                                                     <span>{{ row.getName() }}</span>
                                                 </a>
                                             </h5>
-                                            {{ 4|rating }}
+                                            {{ row.ratingNumber|rating }}
                                             <div class="price-box">
                                                 {% if row.getRegularPrice() is empty and row.getSalePrice() is empty %}
                                                     <div class="price-regular">
@@ -281,7 +281,7 @@
                                                     <span>{{ row.getName() }}</span>
                                                 </a>
                                             </h5>
-                                            {{ 4|rating }}
+                                            {{ row.ratingNumber|rating }}
                                             <div class="price-box">
                                                 {% if row.getRegularPrice() is empty and row.getSalePrice() is empty %}
                                                     <div class="price-regular">
