--- a/app/Resources/views/homepage/index.html.twig
+++ b/app/Resources/views/homepage/index.html.twig
@@ -310,7 +310,9 @@
 
         <section class="home-new-product-tab">
             <div class="container">
-                <img src="{{ asset('assets/images/serum-tri-nam.jpg') }}" alt="Serum trị nám">
+                <a href="{{ path('product_show', {'slug': 'kem-tri-nam-saffron-nano-melanin-skin' }) }}" title="Kem trị nám Saffron Nano Melanin Skin">
+                    <img src="{{ asset('assets/images/serum-tri-nam.jpg') }}" alt="Kem trị nám Saffron Nano Melanin Skin">
+                </a>
              </div>
         </section>
 
