--- a/app/Resources/views/layout/footer.html.twig
+++ b/app/Resources/views/layout/footer.html.twig
@@ -41,6 +41,9 @@
                         <a href="{{ path('news_show', {'slug': 'tuyen-dai-ly-cong-tac-vien' }) }}" title="Tuyển đại lý, cộng tác viên">Tuyển đại lý, cộng tác viên</a>
                     </li>
                     <li>
+                        <a href="{{ path('news_show', {'slug': 'chinh-sach-giao-hang-va-tra-hang' }) }}" title="Chính sách giao hàng và trả hàng">Chính sách giao hàng và trả hàng</a>
+                    </li>
+                    <li>
                         <a href="{{ path('contact') }}">Liên hệ</a>
                     </li>
                 </ul>
