--- a/app/Resources/views/product/show.html.twig
+++ b/app/Resources/views/product/show.html.twig
@@ -236,7 +236,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div id="product-recommendations">
+                                            <div id="product-recommendations" class="hidden">
                                                 <div>
                                                     <div class="related-products page-width product-recommendations js-product-recomendation">
                                                         <div class="widget-title">
