--- a/web/assets/scss/front/global/_menu.scss
+++ b/web/assets/scss/front/global/_menu.scss
@@ -65,15 +65,22 @@
                 box-shadow: none;
                 padding: 0;
                 position: relative;
+                text-align: center;
     
                 @media only screen and (max-width: 767.98px) {
                     width: 100%;
                     float: left !important;
+                    text-align: left;
                 }
     
                 .navbar-nav {
+                    display: inline-block;
+                    float: none;
+                    vertical-align: top;
+
                     @media only screen and (max-width: 767.98px) {
                         margin: 0;
+                        width: 100%;
                     }
                 }
     
