--- a/web/assets/scss/front/pages/_news.scss
+++ b/web/assets/scss/front/pages/_news.scss
@@ -30,7 +30,7 @@
 ------------------------------------------------------------------------- */
 .wrapper-post-container {
     .post-container {
-        margin-top: 20px;
+        margin-top: 10px;
 
         .news {
             h1 {
@@ -78,11 +78,12 @@
 ------------------------------------------------------------------------- */
 .tags {
     display: flex;
-    margin: 20px 0 5px;
+    margin: 20px 0 0;
     font-size: 12px;
 
     ul {
         padding: 0;
+        margin-bottom: 0;
 
         li {
             margin-bottom: 0px;
