--- a/app/Resources/views/layout/slide.html.twig
+++ b/app/Resources/views/layout/slide.html.twig
@@ -4,19 +4,12 @@
             <!-- Indicators -->
             <ol class="carousel-indicators">
                 <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1" class=""></li>
             </ol>
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
                     <img class="lazyload"
                         src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                        data-src="{{ asset('assets/images/banner/home-slide-1.webp') }}"
-                        alt="Lily House">
-                </div>
-                <div class="item">
-                    <img class="lazyload"
-                        src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                        data-src="{{ asset('assets/images/banner/home-slide-3.webp') }}"
+                        data-src="{{ asset('assets/images/serum-tri-nam.jpg') }}"
                         alt="Lily House">
                 </div>
             </div>
