--- a/web/assets/scss/front/pages/_news.scss
+++ b/web/assets/scss/front/pages/_news.scss
@@ -19,6 +19,10 @@
                         font-size: 18px;
                         min-height: 78px;
                         -webkit-line-clamp: 3;
+
+                        @media only screen and (max-width: 767.98px) {
+                            min-height: auto;
+                        }
                     }
                 }
             }
@@ -46,6 +50,10 @@
         
                     li {
                         margin-bottom: 0.3 em;
+
+                        ul {
+                            margin-top: 10px;
+                        }
                     }
                 }
         
