--- a/web/assets/scss/front/pages/_product.scss
+++ b/web/assets/scss/front/pages/_product.scss
@@ -425,6 +425,10 @@
                 h3 {
                     font-size: 20px;
                 }
+
+                h4 {
+                    font-size: 16px;
+                }
             }
         }
 
